Fix mobi content left margin (remove white space)

--- a/sites/all/themes/masslegalhelp/css/media.css
+++ b/sites/all/themes/masslegalhelp/css/media.css
@@ -224,6 +224,11 @@
 		margin-bottom:25px;
 		border-bottom:1px solid #dadada;
 	}
+	/* lily 8/4/2016 - remove white space on the left for mobi */
+	.mlh_center {
+		padding-left:0;
+	}
+	
 	
 	.mlh-right,
 	.section-basic-legal-information .mlh-right {
